# spe-final-project

./: .dockerignore  .gitleaks.toml  .trivyignore  DEPLOYMENT_FLOW_EXPLAINED.md  Dockerfile.backend  Dockerfile.driver  Dockerfile.gateway  Dockerfile.init  Dockerfile.location  Dockerfile.matching  Dockerfile.notification  Dockerfile.rider  Dockerfile.station  Dockerfile.trip  JENKINS_SETUP.md  Jenkinsfile  Jenkinsfile.selective  KUBECONFIG_SETUP.md  PIPELINE_RUN.md  README.md  bandit.yml  build_images.sh  docker-compose.yml  gateway.py  jenkins_issues_log.txt  load_images_minikube.sh  pyproject.toml  report.txt  steps_to_run.txt  temp.txt  temp_step.txt
ansible/: deploy.yml  inventory  inventory.ini  secrets.yml
ansible/playbooks/: site.yml
common/: db.py  env.py  geo.py  run.py
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: App.tsx  index.css
k8s/: backend-services.yaml  frontend.yaml  gateway.yaml  hpa.yaml  init-db-job.yaml  jenkins.yaml  mongo.yaml  vault-agent-example.yaml
k8s/elk/: elasticsearch.yaml  filebeat.yaml  kibana.yaml  logstash.yaml
lastmile/v1/: common_pb2.py  common_pb2_grpc.py  driver_pb2.py  (+15 more)
scripts/: gen_protos.sh  init_db.py  load_gen.py
services/: driver_svc.py  location_svc.py  matching_svc.py  notification_svc.py  rider_svc.py  station_svc.py  trip_svc.py  user_svc.py
tests/: test_driver_svc.py  test_location_svc.py  test_matching_svc.py  test_notification_svc.py  test_rider_svc.py  test_station_svc.py  test_trip_svc.py  test_user_svc.py
(+57 files in other folders)
